--- a/style.css
+++ b/style.css
@@ -11,51 +11,161 @@
 body {
     background-color: #f2f2f2;
     margin: 1% 10%;
-    /*margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 5%;
-    margin-bottom: 5%;*/
     font-family: Segoe;
 }
 
 header, footer, section {
     background-color: #ffffff;
-    border-radius: 15px;;
+    border-radius: 15px;
     padding: 1em;
     margin: 1em 0em;
+    box-shadow: 0 1.6px 3.6px 0 rgb(0 0 0 / 13%), 0 0.3px 0.9px 0 rgb(0 0 0 / 11%);
 }
-
 header:hover, footer:hover, section:hover {
-    box-shadow: 0em 0em 1em black;
+    box-shadow: 0 1.6px 3.6px 0 rgb(0 0 0 / 52%), 0 0.3px 0.9px 0 rgb(0 0 0 / 44%);
+    transition: box-shadow .15s ease-in-out;
 }
 
 article {
     text-align: justify;
 }
 
-aside {
-    padding: 2%;
+.content > article {
+    flex: 60%;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.content > aside {
+    display: flex;
+    flex: 40%;
+    padding-left: 2%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
 section.achievements {
-    position: inline-block;
-    width: auto;
-    float: left;
+    width: 30%;
+    padding: 1em;
 }
 
-footer {
-    clear: both;
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+img.logo {
+    width: 98px;
+    height: 98px;
 }
 
 h1, h2, h3 {
     color: black;
 }
 
+header {
+    display: inline-flex;
+    width: 100%;
+}
 
-a {
-    color: #0074e5;
+nav {
+    display: flex;
+    flex-direction: row;
+    float: right;
+    margin: auto 0 auto auto;
+}
+
+a.button, a.menu {
+    display: block;
+    color: #ffffff;
+    background-color: #0078d4;
+    text-decoration: none;
+    padding: 0.5em;
+    transition : color .15s ease-in-out, background-color .15s ease-in-out;
+    text-align: center;
+}
+a.button:hover, a.menu:hover {
+    background-color: #0862ab;
+}
+a.button:focus, a.menu:focus {
+    background-color: #033e6c;
+}
+a.button {
+    width: fit-content;
+    margin-top: 0.5em;
+}
+a.menu {
+    width: 150px;
+    margin-left: 1em;
+    align-items: center;
 }
 
 p.light {
     font-family: SegoeLight;
+    margin: 0;
+}
+
+footer p {
+    margin: 0;
+}
+
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+    body {
+        margin: 1%;
+    }
+    header, footer, section {
+        width: 100%;
+    }
+    header {
+        margin-top: 0;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+    }
+    nav {
+        float: none;
+        margin: auto;
+    }
+    footer {
+        margin-bottom: 0;
+    }
+    a.menu {
+        margin: 0.5em;
+    }
+    section.achievements {
+        width: 100%;
+    }
+    .container {
+        flex-direction: column;
+        margin: auto;
+    }
+    .main {
+        display: flex;
+        width: 100%;
+    }
+    aside {
+        display: flex;
+        flex: 100%;
+        margin: auto;
+    }
+    .content article {
+        flex: 100%;
+    }
 }
