--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ header:hover, footer:hover, section:hover {
     transition: box-shadow .15s ease-in-out;
 }
 
-.project {
+#project {
     text-align: justify;
 }
-.project > img {
+#project > img {
     width: 100%;
     height: auto;
     border-radius: 15px;
@@ -109,6 +109,14 @@ section.achievements {
     padding: 1em;
 }
 
+.achievements > img {
+    width: 100%;
+    height: auto;
+    /*max-height: 121.95px;*/
+    border-radius: 15px;
+    margin: 1em 0em;
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -124,6 +132,10 @@ img.logo {
 
 h1, h2, h3, h4 {
     color: black;
+}
+
+h2 {
+    margin-top: 0;
 }
 
 header {
