Added header/footer + minor changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,24 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+const d: Date = new Date();
+const year: number = d.getFullYear();
 ---
 
 <Layout title="Tristan Bony - Software Engineering Student">
+	<header class="header p-4 bg-white text-base-content shadow-lg rounded-2xl w-full">
+		<!-- TODO -->
+		<a href="https://www.tristanbony.me/" class="inline-flex">
+			<img src="./images/favicon.svg" alt="Tristan Bony" class="w-24 h-24" />
+			<h1 class="text-black font-bold text-4xl my-auto ms-4">Tristan Bony</h1>
+		</a>
+	</header>
+
 	<main>
+		<!-- Add presentation -->
 		<!-- TODO - Add sort options for perso-projects | school-projects | work-exp -->
-		<div class="flex flex-row flex-wrap" id="cards-container"> <!-- TODO- Center -->
+		<div class="flex flex-row flex-wrap justify-center" id="cards-container"> <!-- TODO- Center -->
 			<Card 
 				href="http://localhost:3000"
 				title="Get Started"
@@ -21,6 +33,19 @@ import Card from '../components/Card.astro';
 				image="../src/assets/my_website_v4/Screen_TristanB_en.png"
 				category='achievement'
 			/>
+			<Card 
+			href="http://localhost:3000"
+			title="Get Started"
+			description="Learn how to build your first Astro site in minutes."
+			image="../src/assets/my_website_v4/Screen_TristanB_en.png"
+			category='achievement'
+			/>
 		</div>
 	</main>
+
+	<footer class="footer footer-center p-4 bg-white shadow-lg rounded-2xl text-base">
+		<div>
+			<p>&copy; {year} Tristan Bony</p>
+		</div>
+	  </footer>
 </Layout>
