--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -23,12 +23,12 @@ const cardTitle = (cat: string) => {
 const { category, image, title, description, href } = Astro.props;
 ---
 
-<section class="card shadow-xl bg-white border w-[33%]">
+<section class="card shadow-lg bg-white border w-1/3 m-2">
 	<figure>
 		<img src={image} alt="Something to put here" /><!-- TODO - Add alt text -->
 	</figure>
 	<article class="card-body">
-		<div class="badge badge-outline">{cardTitle(category)}</div>
+		<div class="badge badge-outline text-gray-500">{cardTitle(category)}</div>
 		<h2 class="card-title">{title}</h2>
 		<p class="justify-normal">{description}</p>
 		<div class="card-actions justify-end">
