--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,24 +7,20 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" class="bg-gray-100">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="./images/favicon.ico" />	<!-- /favicon.svg -->
+		<link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-gray-100">
+	<body class="my-4 mx-52">
 		<slot />
 	</body>
 </html>
 <style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
 	body {
 		font-family: 'Segoe UI', system-ui, sans-serif;
 		color: black;
