--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -23,7 +23,7 @@ const cardTitle = (cat: string) => {
 const { category, image, title, description, href } = Astro.props;
 ---
 
-<section class="card shadow-lg bg-white border w-1/3 m-2">
+<section class="card shadow-lg bg-white border w-[30%] m-2">
 	<figure>
 		<img src={image} alt="Something to put here" /><!-- TODO - Add alt text -->
 	</figure>
