--- a/src/layouts/CardDisplay.astro
+++ b/src/layouts/CardDisplay.astro
@@ -4,26 +4,26 @@ import Card from '../components/Card.astro';
 // TODO - Add sort options for perso-projects | school-projects | work-exp
 ---
 <!-- TODO - Add sort options for perso-projects | school-projects | work-exp -->
-<div class="flex flex-row flex-wrap justify-center" id="cards-container"> <!-- TODO- Center -->
+<div class="flex flex-row flex-wrap justify-center" id="cards-container"> <!-- TODO - Center -->
     <Card 
         href="http://localhost:3000"
-        title="Get Started"
-        description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+        title="My website v5"
+        description="The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years."
         image="../src/assets/my_website_v5/Screen_TristanB_v5.png"
         category='achievement'
     />
     <Card 
         href="http://localhost:3000"
-        title="Get Started"
-        description="Learn how to build your first Astro site in minutes."
-        image="../src/assets/my_website_v4/Screen_TristanB_en.png"
-        category='achievement'
+        title="Q-learning"
+        description="Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
+        image="../src/assets/q_learning/player_mode.png"
+        category='school-project'
     />
     <Card 
-    href="http://localhost:3000"
-    title="Get Started"
-    description="Learn how to build your first Astro site in minutes."
-    image="../src/assets/my_website_v4/Screen_TristanB_en.png"
-    category='achievement'
+        href="http://localhost:3000"
+        title="INVIVOO internship"
+        description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
+        image=""
+        category='experience'
     />
 </div>
