--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -1,5 +1,9 @@
 ---
 // Might need JS to print next visualization
+
+const todaysDate: Date = new Date();
+const birthday: Date = new Date(2000, 4, 16);
+const age: number = (todaysDate.getTime() - birthday.getTime())/(1000*60*60*24*365.25)
 ---
 
 <section id="presentation" class="shadow-lg bg-white border w-full rounded-2xl p-4 mb-2">
@@ -16,34 +20,38 @@
                 My engineering studies have allowed me to acquire skills in C, C++, C# (.NET), Java and SQL which completes my knowledge acquired as a self-taught person, such as Python, HTML, CSS as well as some PHP. Finally, I use GNU/Linux and Windows operating systems.
             </p>
             <p class="mb-3">
-                Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker/9-ball). In my free time, I also like to watch movies and series... and cat pictures of course.
+                I then had the opportunity to do a double cursus in the University of Oklahoma thanks to my motivation to succeed. I discovered a new 
             </p>
             <p class="mb-3">
-                Finally, I studied three languages in addition of French (my native language): English (B2-C1), Spanish (B1) and Mandarin (notions).
+                Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker/9-ball). In my free time, I also like to watch movies and series... and cat pictures of course. By the way, I also started playing violin at the age of 4 and traveled a lot.
             </p>
+            <p class="mb-3">
+                Finally, I studied three languages in addition of French (my native language): English (C1), Spanish (B1) and Mandarin (notions).
+            </p>
+            <!-- Show the boring funnier text if clicked or the innovative presentation by default -->
         </article>
         <aside class="flex flex-[25%] flex-col flex-wrap ml-5 justify-around items-center shadow-lg rounded-2xl">
             <div class="bg-blue-500 h-36 w-full mb-14 rounded-t-2xl">
                 <img class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl" src="../src/assets/profile_pic.jpg" alt="Picture of me" />
             </div>
             <div class="p-4 mt-4 text-center">
-                <h3 class="text-lg font-semibold">Tristan Bony</h3>
-                <p>Student in Software Engineering and Information Systems @ ISIMA, Aubière, France</p>
+                <h3 class="text-lg font-semibold">Tristan Bony, {age.toFixed(0)}</h3>
+                <p>Student in Computer Sciences @ University of Oklahoma, Norman, OK, USA</p>
                 <ul>
                     <li class="card-li">
-                        <span>Clermont-Ferrand, France</span>
+                        <span class="">Lyon - Clermont-Ferrand - Norman, OK</span>
                     </li>
                     <li class="card-li">
-                        <a href="tel:+33642089117">+33(0)6 42 08 91 17</a>
+                        <a href="tel:+33642089117" class="hover:underline hover:decoration-blue-500 hover:decoration-2">+33(0)6 42 08 91 17</a>
                     </li>
                     <li class="card-li">
-                        <a href="mailto:tristan.bony@proton.me">tristan.bony@proton.me</a>
+                        <a href="mailto:tristan.bony@proton.me" class="hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
                     </li>
                 </ul>
                 <p><a href="./pdf/CV_English.pdf" target="_blank" class="card-cv">Download my CV (English)</a></p>
                 <p><a href="./pdf/CV_French.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
             </div>
-            <div class="flex flex-wrap justify-around items-center">
+            <div class="flex flex-wrap justify-around items-center pb-4">
                 <a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="w-8 h-8 m-2">
                     <img src="./images/LI-In-Bug.png" alt="LinkedIn" />
                 </a>
