Laying the foundation for later (possibly)

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,6 +5,7 @@ interface Props {
 	title: string;
 	description: string;
 	href: string;
+	status: string;	// TODO - Add a colored indicator (position as category); values: completed, in-progress, maintenance or empty
 }
 
 const cardTitle = (cat: string) => {
