--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -37,17 +37,20 @@ const age: number = (todaysDate.getTime() - birthday.getTime())/(1000*60*60*24*3
             <div class="p-4 mt-4 text-center">
                 <h3 class="text-lg font-semibold">Tristan Bony, {age.toFixed(0)}</h3>
                 <p>Student in Computer Sciences @ University of Oklahoma, Norman, OK, USA</p>
-                <ul>
-                    <li class="card-li">
-                        <span class="">Lyon - Clermont-Ferrand - Norman, OK</span>
-                    </li>
-                    <li class="card-li">
-                        <a href="tel:+33642089117" class="hover:underline hover:decoration-blue-500 hover:decoration-2">+33(0)6 42 08 91 17</a>
-                    </li>
-                    <li class="card-li">
-                        <a href="mailto:tristan.bony@proton.me" class="hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
-                    </li>
-                </ul>
+                <address>
+                    <ul>
+                        <li class="card-li">
+                            <span class="">Lyon - Clermont-Ferrand - Norman, OK</span>
+                        </li>
+                        <li class="card-li">
+                            <a href="tel:+33642089117" class="hover:underline hover:decoration-blue-500 hover:decoration-2">+33(0)6 42 08 91 17</a>
+                        </li>
+                        <li class="card-li">
+                            <ad
+                            <a href="mailto:tristan.bony@proton.me" class="hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
+                        </li>
+                    </ul>
+                </address>
                 <p><a href="./pdf/CV_English.pdf" target="_blank" class="card-cv">Download my CV (English)</a></p>
                 <p><a href="./pdf/CV_French.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
             </div>
