--- a/src/layouts/CardDisplay.astro
+++ b/src/layouts/CardDisplay.astro
@@ -11,6 +11,7 @@ import Card from '../components/Card.astro';
         description="The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years."
         image="../src/assets/my_website_v5/Screen_TristanB_v5.png"
         category='achievement'
+        status="in-progress"
     />
     <Card 
         href="http://localhost:3000"
@@ -18,6 +19,7 @@ import Card from '../components/Card.astro';
         description="Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
         image="../src/assets/q_learning/player_mode.png"
         category='school-project'
+        status="completed"
     />
     <Card 
         href="http://localhost:3000"
@@ -25,5 +27,6 @@ import Card from '../components/Card.astro';
         description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
         image=""
         category='experience'
+        status=''
     />
 </div>
