--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -35,7 +35,7 @@ const age: number = (todaysDate.getTime() - birthday.getTime())/(1000*60*60*24*3
                 <img class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl" src="../src/assets/profile_pic.jpg" alt="Picture of me" />
             </div>
             <div class="p-4 mt-4 text-center">
-                <h3 class="text-lg font-semibold">Tristan Bony, {age.toFixed(0)}</h3>
+                <h3 class="text-lg font-semibold">Tristan Bony, {age.toFixed(0)}, <span class="italic">(he/him)</span></h3>
                 <p>Student in Computer Sciences @ University of Oklahoma, Norman, OK, USA</p>
                 <address>
                     <ul>
