Fixed Tailwind mobile first + svg logo

--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="my-4 mx-52">
+	<body class="md:my-4 md:mx-52 m-4">
 		<slot />
 	</body>
 </html>
