--- a/src/layouts/CardDisplay.astro
+++ b/src/layouts/CardDisplay.astro
@@ -10,7 +10,7 @@ import Card from '../components/Card.astro';
         title="My website v5"
         description="The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years."
         image="../src/assets/my_website_v5/Screen_TristanB_v5.png"
-        category='achievement'
+        category="achievement"
         status="in-progress"
     />
     <Card 
@@ -18,7 +18,7 @@ import Card from '../components/Card.astro';
         title="Q-learning"
         description="Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
         image="../src/assets/q_learning/player_mode.png"
-        category='school-project'
+        category="school-project"
         status="completed"
     />
     <Card 
@@ -26,7 +26,15 @@ import Card from '../components/Card.astro';
         title="INVIVOO internship"
         description="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
         image=""
-        category='experience'
-        status=''
+        category="experience"
+        status=""
+    />
+    <Card
+        href="http://localhost:4321"
+        title="Lorem Ipsum"
+        description="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
+        image=""
+        category="other"
+        status=""
     />
 </div>
