--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -35,23 +35,39 @@ const age: number = Math.floor((todaysDate.getTime() - birthday.getTime())/(1000
                 <img class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl" src="../src/assets/profile_pic.jpg" alt="Picture of me" />
             </div>
             <div class="p-4 mt-4 text-center">
-                <h3 class="text-lg font-semibold">Tristan Bony, {age}, <span class="italic">(he/him)</span></h3>
-                <p>Student in Computer Sciences @ University of Oklahoma, Norman, OK, USA && ISIMA, France</p>
-                <address>
-                    <ul>
-                        <li class="card-li">
-                            <span class="">Lyon, FR - Clermont-Ferrand, FR - Norman, OK, USA</span>
-                        </li>
-                        <li class="card-li">
-                            <a href="tel:+33642089117" class="hover:underline hover:decoration-blue-500 hover:decoration-2">+33(0)6 42 08 91 17</a>
-                        </li>
-                        <li class="card-li">
-                            <a href="mailto:tristan.bony@proton.me" class="hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
-                        </li>
-                    </ul>
-                </address>
-                <p><a href="./pdf/CV_English.pdf" target="_blank" class="card-cv">Download my CV (English)</a></p>
-                <p><a href="./pdf/CV_French.pdf" target="_blank" class="card-cv">Download my CV (French)</a></p>
+                <ul>
+                    <li>
+                        <span class="text-lg font-semibold">Tristan Bony, {age}, <span class="italic">(he/him)</span></span>
+                    </li>
+                    <li>
+                        <img src="./images/education.svg" class="inline w-4" />
+                        <span class="card-li">Student in Computer Sciences @ University of Oklahoma, Norman, OK, USA && ISIMA, France</span>
+                    </li>
+                    <li>
+                        <address>
+                            <li class="card-li">
+                                <img src="./images/location.svg" class="inline w-4" />
+                                <span class="">Norman, OK, USA</span>
+                            </li>
+                            <li class="card-li">
+                                <img src="./images/phone.svg" class="inline w-4" />
+                                <a href="tel:+33642089117" class="hover:underline hover:decoration-blue-500 hover:decoration-2 inline">+33(0)6 42 08 91 17</a>
+                            </li>
+                            <li class="card-li">
+                                <img src="./images/email.svg" class="inline w-4" />
+                                <a href="mailto:tristan.bony@proton.me" class="hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
+                            </li>
+                        </address>
+                    </li>
+                    <li>
+                        <img src="./images/pdf.svg" class="inline w-4" />
+                        <span><a href="./pdf/CV_English.pdf" target="_blank" class="card-cv">Download my CV (English)</a></span>
+                    </li>
+                    <li>
+                        <img src="./images/pdf.svg" class="inline w-4" />
+                        <span><a href="./pdf/CV_French.pdf" target="_blank" class="card-cv">Download my CV (French)</a></span>
+                    </li>
+                </ul>
             </div>
             <div class="flex flex-wrap justify-around items-center pb-4">
                 <a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="w-8 h-8 m-2">
