--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -37,47 +37,60 @@ const age: number = Math.floor((todaysDate.getTime() - birthday.getTime())/(1000
             <div class="p-4 mt-4 text-center">
                 <ul>
                     <li>
-                        <span class="text-lg font-semibold">Tristan Bony, {age}, <span class="italic">(he/him)</span></span>
+                        <span class="text-lg font-semibold">Tristan Bony, {age} <span class="italic">(he/him)</span></span>
                     </li>
                     <li>
-                        <img src="./images/education.svg" class="inline w-4" />
-                        <span class="card-li">Student in Computer Sciences @ University of Oklahoma, Norman, OK, USA && ISIMA, France</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" />
+                        </svg>
+                        <span class="text-md">Student in Computer Sciences @ University of Oklahoma && ISIMA</span>
                     </li>
                     <li>
                         <address>
                             <li class="card-li">
-                                <img src="./images/location.svg" class="inline w-4" />
-                                <span class="">Norman, OK, USA</span>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+                                </svg>
+                                <span class="text-md">Norman, OK, USA</span>
                             </li>
                             <li class="card-li">
-                                <img src="./images/phone.svg" class="inline w-4" />
-                                <a href="tel:+33642089117" class="hover:underline hover:decoration-blue-500 hover:decoration-2 inline">+33(0)6 42 08 91 17</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
+                                </svg>
+                                <a href="tel:+33642089117" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">+33(0)6 42 08 91 17</a>
                             </li>
                             <li class="card-li">
-                                <img src="./images/email.svg" class="inline w-4" />
-                                <a href="mailto:tristan.bony@proton.me" class="hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+                                </svg>                                  
+                                <a href="mailto:tristan.bony@proton.me" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
                             </li>
                         </address>
                     </li>
                     <li>
-                        <img src="./images/pdf.svg" class="inline w-4" />
-                        <span><a href="./pdf/CV_English.pdf" target="_blank" class="card-cv">Download my CV (English)</a></span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+                        </svg>  
+                        <a href="./pdf/CV_English.pdf" target="_blank" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">Download my CV (English)</a>
                     </li>
                     <li>
-                        <img src="./images/pdf.svg" class="inline w-4" />
-                        <span><a href="./pdf/CV_French.pdf" target="_blank" class="card-cv">Download my CV (French)</a></span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+                        </svg>                          
+                        <a href="./pdf/CV_French.pdf" target="_blank" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">Download my CV (French)</a>
                     </li>
                 </ul>
             </div>
             <div class="flex flex-wrap justify-around items-center pb-4">
-                <a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="w-8 h-8 m-2">
-                    <img src="./images/LI-In-Bug.svg" alt="LinkedIn" />
+                <a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out">
+                    <img src="./images/linkedin_logo.svg" alt="LinkedIn" />
                 </a>
-                <a href="https://floss.social/@TristanB0" target="_blank" title="Come see my toots" class="w-8 h-8 m-2">
-                    <img src="./images/mastodon-logo-purple.svg" alt="Mastodon" />
+                <a href="https://floss.social/@TristanB0" target="_blank" title="Come see my toots" class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out">
+                    <img src="./images/mastodon_logo.svg" alt="Mastodon" />
                 </a>
-                <a href="https://www.github.com/TristanB0" target="_blank" title="Link to my projects" class="w-8 h-8 m-2">
-                    <img src="./images/github-mark.svg" alt="GitHub" />
+                <a href="https://www.github.com/TristanB0" target="_blank" title="Link to my projects" class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out">
+                    <img src="./images/github_logo.svg" alt="GitHub" />
                 </a>
             </div>
         </aside>
