Fixed links + improved markdown formatting + cleaning

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -17,7 +17,7 @@ const cardTitle = (cat: string) => {
 		case "experience":
 			return "Experiences";
 		default:
-			return "Unknown";
+			return "Other";
 	}
 };
 
