--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -8,7 +8,7 @@ const year: number = d.getFullYear();
 <GlobalLayout title="Tristan Bony - Software Engineering Student">
 	<header class="header p-4 bg-white text-base-content shadow-lg rounded-2xl w-full mb-4 flex flex-row">
 		<a href="https://www.tristanbony.me/" class="inline-flex">
-			<img src="../../images/favicon.svg" alt="Logo representing the initials T B" class="w-24 h-24" />
+			<img src="/images/favicon.svg" alt="Logo representing the initials T B" class="w-24 h-24" />
 			<h1 class="text-black font-bold text-4xl my-auto ms-4">Tristan Bony</h1>
 		</a>
 		<div class="flex-grow"></div>	<!-- TODO - Find better solution -->
