--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,7 +1,10 @@
 ---
+import { Image } from "astro:assets"
+
 interface Props {
 	category: string;
 	image: string;
+	imageAlt: string;
 	title: string;
 	description: string;
 	href: string;
@@ -41,12 +44,12 @@ const cardStatus = (status: string) => {
 	}
 };
 
-const { category, image, title, description, href, status } = Astro.props;
+const { category, image, imageAlt, title, description, href, status } = Astro.props;
 ---
 
 <section class="card shadow-lg bg-white border md:w-[30%] m-2 w-[100%]">
 	<figure>
-		<img src={image} alt="Something to put here" /><!-- TODO - Add alt text -->
+		<img src={image} alt={imageAlt} />
 	</figure>
 	<article class="card-body">
 		<div class="inline">
