Temporary partial rollback

--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -34,7 +34,7 @@ import profilePic from "../assets/profile_pic.jpg";
         </article>
         <aside class="flex md:flex-[25%] flex-col flex-wrap md:ml-5 justify-around items-center shadow-lg rounded-2xl">
             <div class="bg-blue-500 h-36 w-full mb-14 rounded-t-2xl">
-                <Image class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl" src={profilePic} alt="Picture of me" />
+                <img class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl" src={profilePic.src} alt="Picture of me" />
             </div>
             <div class="p-4 mt-4 text-center">
                 <ul>
