--- a/src/layouts/CardDisplay.astro
+++ b/src/layouts/CardDisplay.astro
@@ -14,17 +14,15 @@ import Card from '../components/Card.astro';
         imageAlt="Screenshot of my website on v5"
         category="achievement"
         status="in-progress"
-        client:visible
     />
     <Card 
         href="./posts/q_learning"
         title="Q-learning"
         description="Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
-        image="../assets/q_learning/player_mode.png"
+        image="./src/assets/q_learning/player_mode.png"
         imageAlt="Screenshot of the game in player mode"
         category="school-project"
         status="completed"
-        client:visible
     />
     <Card 
         href="./posts/test_post"
@@ -34,7 +32,6 @@ import Card from '../components/Card.astro';
         imageAlt=""
         category="experience"
         status=""
-        client:visible
     />
     <Card
         href="./posts/test_post"
@@ -44,6 +41,5 @@ import Card from '../components/Card.astro';
         imageAlt=""
         category="other"
         status="abandoned"
-        client:visible
     />
 </div>
