Fixed MDX content not visible

--- a/src/layouts/CardDisplay.astro
+++ b/src/layouts/CardDisplay.astro
@@ -10,7 +10,7 @@ import Card from '../components/Card.astro';
         href="./posts/my_website_v5"
         title="My website v5"
         description="The most recent version of my website in which I present my interest for IT and the different projects I have made throughout the years."
-        image="./src/assets/my_website_v5/Screen_TristanB_v5.png"
+        image="../assets/my_website_v5/Screen_TristanB_v5.png"
         imageAlt="Screenshot of my website on v5"
         category="achievement"
         status="in-progress"
@@ -19,7 +19,7 @@ import Card from '../components/Card.astro';
         href="./posts/q_learning"
         title="Q-learning"
         description="Making of a game and an IA using the C language and SDL2 to find the exit of a maze via the quickest path."
-        image="./src/assets/q_learning/player_mode.png"
+        image="../assets/q_learning/player_mode.png"
         imageAlt="Screenshot of the game in player mode"
         category="school-project"
         status="completed"
