--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "astro:assets";
+//import { Image } from "astro:assets";
 
 const todaysDate: Date = new Date();
 const birthday: Date = new Date(2000, 4, 16);
