--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,7 +1,7 @@
 ---
-import GlobalLayout from '../layouts/GlobalLayout.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import GlobalLayout from "../layouts/GlobalLayout.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
 const { frontmatter } = Astro.props;
 ---
