--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -1,5 +1,5 @@
---- 
-import { ViewTransitions } from 'astro:transitions';
+---
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
 	title: string;
@@ -8,24 +8,24 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US" class="bg-gray-100">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
+		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<style is:global>
+			body {
+				font-family: "Segoe UI", system-ui, sans-serif;
+				color: black;
+			}
+		</style>
 		<ViewTransitions />
 	</head>
 	<body class="md:my-4 md:mx-52 m-4">
 		<slot />
 	</body>
 </html>
-<style is:global>
-	body {
-		font-family: 'Segoe UI', system-ui, sans-serif;
-		color: black;
-	}
-</style>
