--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -3,95 +3,242 @@
 
 const todaysDate: Date = new Date();
 const birthday: Date = new Date(2000, 4, 16);
-const age: number = Math.floor((todaysDate.getTime() - birthday.getTime())/(1000*60*60*24*365.25));
+const age: number = Math.floor(
+    (todaysDate.getTime() - birthday.getTime()) /
+        (1000 * 60 * 60 * 24 * 365.25),
+);
 
 import profilePic from "../assets/profile_pic.jpg";
 ---
 
-<section id="presentation" class="shadow-lg bg-white border w-full rounded-2xl p-4 mb-2">
+<section
+    id="presentation"
+    class="shadow-lg bg-white border w-full rounded-2xl p-4 mb-2"
+>
     <div class="flex flex-row flex-wrap justify-around items-center">
         <article class="text-justify md:flex-[70%]">
             <h2 class="text-2xl font-bold mb-10">Who am I? (boring version)</h2>
             <p class="mb-3">
-                Immersed in the world of computer science from a very young age, I quickly became curious to understand the technologies that are part of our daily lives by tinkering and searching for information by myself.
+                Immersed in the world of computer science from a very young age,
+                I quickly became curious to understand the technologies that are
+                part of our daily lives by tinkering and searching for
+                information by myself.
             </p>
             <p class="mb-3">
-                That's why I decided to join ISIMA, a French engineering school specialized in computer science after my CPGE at the Edouard Branly high school in Lyon in order to acquire more information and to gain experience to make it my job. These trainings taught me rigor with the help of scientific knowledge like mathematics, industrial sciences, physics and, of course, computer science.
+                That's why I decided to join ISIMA, a French engineering school
+                specialized in computer science after my CPGE at the Edouard
+                Branly high school in Lyon in order to acquire more information
+                and to gain experience to make it my job. These trainings taught
+                me rigor with the help of scientific knowledge like mathematics,
+                industrial sciences, physics and, of course, computer science.
             </p>
             <p class="mb-3">
-                My engineering studies have allowed me to acquire skills in C, C++, C# (.NET), Java and SQL which completes my knowledge acquired as a self-taught person, such as Python, HTML, CSS as well as some PHP. Finally, I use GNU/Linux and Windows operating systems.
+                My engineering studies have allowed me to acquire skills in C,
+                C++, C# (.NET), Java and SQL which completes my knowledge
+                acquired as a self-taught person, such as Python, HTML, CSS as
+                well as some PHP. Finally, I use GNU/Linux and Windows operating
+                systems.
             </p>
             <p class="mb-3">
-                I then had the opportunity to do a double cursus in the University of Oklahoma thanks to my motivation to succeed. I discovered a new 
+                I then had the opportunity to do a double cursus in the
+                University of Oklahoma thanks to my motivation to succeed. I
+                discovered a new
             </p>
             <p class="mb-3">
-                Besides my passion for technology, I also enjoy mountain biking, skiing and billiards (Blackball/Snooker/9-ball). In my free time, I also like to watch movies and series... and cat pictures of course. By the way, I also started playing violin at the age of 4 and traveled a lot.
+                Besides my passion for technology, I also enjoy mountain biking,
+                skiing and billiards (Blackball/Snooker/9-ball). In my free
+                time, I also like to watch movies and series... and cat pictures
+                of course. By the way, I also started playing violin at the age
+                of 4 and traveled a lot.
             </p>
             <p class="mb-3">
-                Finally, I studied three languages in addition of French (my native language): English (C1), Spanish (B1) and Mandarin (notions).
+                Finally, I studied three languages in addition of French (my
+                native language): English (C1), Spanish (B1) and Mandarin
+                (notions).
             </p>
             <!-- Show the boring funnier text if clicked or the innovative presentation by default -->
         </article>
-        <aside class="flex md:flex-[25%] flex-col flex-wrap md:ml-5 justify-around items-center shadow-lg rounded-2xl">
+        <aside
+            class="flex md:flex-[25%] flex-col flex-wrap md:ml-5 justify-around items-center shadow-lg rounded-2xl"
+        >
             <div class="bg-blue-500 h-36 w-full mb-14 rounded-t-2xl">
-                <img class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl" src={profilePic.src} alt="Picture of me" />
+                <img
+                    class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl"
+                    src={profilePic.src}
+                    alt="Picture of me"
+                />
             </div>
             <div class="p-4 mt-4 text-center">
                 <ul>
                     <li>
-                        <span class="text-lg font-semibold">Tristan Bony, {age} <span class="italic">(he/him)</span></span>
+                        <span class="text-lg font-semibold"
+                            >Tristan Bony, {age}
+                            <span class="italic">(he/him)</span></span
+                        >
                     </li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" />
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke-width="1.5"
+                            stroke="currentColor"
+                            data-slot="icon"
+                            class="w-4 inline"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5"
+                            ></path>
                         </svg>
-                        <span class="text-md">Student in Computer Sciences @ University of Oklahoma && ISIMA</span>
+                        <span class="text-md"
+                            >Student in Computer Sciences @ University of
+                            Oklahoma && ISIMA</span
+                        >
                     </li>
                     <li>
                         <address>
                             <li class="card-li">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z" />
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="currentColor"
+                                    data-slot="icon"
+                                    class="w-4 inline"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+                                    ></path>
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"
+                                    ></path>
                                 </svg>
                                 <span class="text-md">Norman, OK, USA</span>
                             </li>
                             <li class="card-li">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="currentColor"
+                                    data-slot="icon"
+                                    class="w-4 inline"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3"
+                                    ></path>
                                 </svg>
-                                <a href="tel:+33642089117" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">+33(0)6 42 08 91 17</a>
+                                <a
+                                    href="tel:+33642089117"
+                                    class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
+                                    >+33(0)6 42 08 91 17</a
+                                >
                             </li>
                             <li class="card-li">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
-                                </svg>                                  
-                                <a href="mailto:tristan.bony@proton.me" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">tristan.bony@proton.me</a>
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="currentColor"
+                                    data-slot="icon"
+                                    class="w-4 inline"
+                                >
+                                    <path
+                                        stroke-linecap="round"
+                                        stroke-linejoin="round"
+                                        d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
+                                    ></path>
+                                </svg>
+                                <a
+                                    href="mailto:tristan.bony@proton.me"
+                                    class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
+                                    >tristan.bony@proton.me</a
+                                >
                             </li>
                         </address>
                     </li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
-                        </svg>  
-                        <a href="./pdf/CV_English.pdf" target="_blank" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">Download my CV (English)</a>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke-width="1.5"
+                            stroke="currentColor"
+                            data-slot="icon"
+                            class="w-4 inline"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
+                            ></path>
+                        </svg>
+                        <a
+                            href="./pdf/CV_English.pdf"
+                            target="_blank"
+                            class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
+                            >Download my CV (English)</a
+                        >
                     </li>
                     <li>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" data-slot="icon" class="w-4 inline">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
-                        </svg>                          
-                        <a href="./pdf/CV_French.pdf" target="_blank" class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2">Download my CV (French)</a>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke-width="1.5"
+                            stroke="currentColor"
+                            data-slot="icon"
+                            class="w-4 inline"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
+                            ></path>
+                        </svg>
+                        <a
+                            href="./pdf/CV_French.pdf"
+                            target="_blank"
+                            class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
+                            >Download my CV (French)</a
+                        >
                     </li>
                 </ul>
             </div>
             <div class="flex flex-wrap justify-around items-center pb-4">
-                <a href="https://www.linkedin.com/in/tristanbony/" target="_blank" title="Visit my LinkedIn" class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out">
+                <a
+                    href="https://www.linkedin.com/in/tristanbony/"
+                    target="_blank"
+                    title="Visit my LinkedIn"
+                    class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out"
+                >
                     <img src="./images/linkedin_logo.svg" alt="LinkedIn" />
                 </a>
-                <a href="https://floss.social/@TristanB0" target="_blank" title="Come see my toots" class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out">
+                <a
+                    href="https://floss.social/@TristanB0"
+                    target="_blank"
+                    title="Come see my toots"
+                    class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out"
+                >
                     <img src="./images/mastodon_logo.svg" alt="Mastodon" />
                 </a>
-                <a href="https://www.github.com/TristanB0" target="_blank" title="Link to my projects" class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out">
+                <a
+                    href="https://www.github.com/TristanB0"
+                    target="_blank"
+                    title="Link to my projects"
+                    class="w-8 h-8 m-2 hover:scale-125 transition duration-300 ease-in-out"
+                >
                     <img src="./images/github_logo.svg" alt="GitHub" />
                 </a>
             </div>
