Display MDX nicely

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,12 +1,13 @@
 ---
-import GlobalLayout from '../layouts/GlobalLayout.astro';
+import GlobalLayout from "../layouts/GlobalLayout.astro";
 
 const { frontmatter } = Astro.props;
 ---
 
 <GlobalLayout title="Tristan Bony - Software Engineering Student">
-	<main>
+	<main
+		class="shadow-lg bg-white border max-w-none rounded-2xl p-4 mb-4 prose dark:prose-invert prose-headings:text-black prose-h1:font-bold prose-h1:text-xl prose-a:text-blue-600 prose-p:text-justify prose-p:text-black prose-img:rounded-2xl prose-img:max-h-[500px] prose-img:w-full prose-figure:w-fit prose-figure:m-auto prose-figcaption:text-center prose-li:text-black prose-code:text-black prose-figure:border prose-figure:rounded-2xl prose-figure:p-2"
+	>
 		<slot />
-		<!-- TODO: Customize markdown content -->
 	</main>
 </GlobalLayout>
