Fix images on cards

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
 <header
     class="header p-4 bg-white text-base-content shadow-lg rounded-2xl w-full mb-4 flex flex-row"
 >
-    <a href="https://www.tristanbony.me/" class="inline-flex">
+    <a href="/" class="inline-flex">
         <img
             src="/images/favicon.svg"
             alt="Logo representing the initials T B"
