--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -49,7 +49,7 @@ const { title, description, href, image, category, status } = Astro.props;
 
 <section class="card shadow-lg bg-white border md:w-[30%] m-2 w-[100%]">
 	<figure>
-		<img src={image.path} alt={image.alt} />
+		<img src={image.path} alt={image.alt || "Missing image"} />
 	</figure>
 	<article class="card-body">
 		<div class="inline">
